--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						На связи:
 					</p>
 
-					<ul class="header-skills__socilas">
+					<ul class="socials">
 						<li>
 							<a href="#!">
 								<svg class="svg-tg">
@@ -220,7 +220,7 @@
 	<section class="work">
 		<div class="container">
 			<div class="flex-wrapper">
-
+				
 			</div>
 		</div>
 	</section>
