--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 							<h1 class="h1 grad-border">Альберт Буров</h1>
 						</div>
 						<div class="header-content__descr visible-descr">
-							<p>Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнение ТЗ.</p>
+							<p>Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и
+								выполнение ТЗ.</p>
 						</div>
 						<div class="header-content__btn">
 							<a href="#skills" class="btn">Познакомиться</a>
@@ -87,13 +88,13 @@
 			</div>
 			<div class="header-content__banner">
 				<img src="./img/bg/header-bg.png" alt="Banner">
-			</div>	
+			</div>
 		</div>
 	</section>
 
 	<section class="header-skills" id="skills">
 		<div class="container">
-			<div class="flex-wrapper">
+			<div class="header-skills__wrapper">
 				<div class="header-skills__col">
 					<p class="h3">
 						Что я умею:
@@ -141,7 +142,7 @@
 							</a>
 						</li> -->
 						<!-- <object data="./img/socials/inst.svg" type="image/svg+xml" width="48" height="48"></object> -->
-						<li >
+						<li>
 							<a href="#!">
 								<img src="./img/socials/inst.svg" alt="">
 							</a>
@@ -154,13 +155,13 @@
 							</a>
 						</li>
 					</ul>
-					<div class="email">
-						<a href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
+					<div class="email-wrapper">
+						<a class="email" href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>		
+	</section>
 
 	<section class="portfolio">
 		<div class="container">
@@ -217,10 +218,39 @@
 		</div>
 	</section>
 
-	<section class="work">
+	<section class="timeline">
 		<div class="container">
-			<div class="flex-wrapper">
-				
+			<div class="section-title">
+				<h2 class="h2 grad-border">Как я работаю</h2>
+			</div>
+			<div class="timeline-wrapper">
+				<div class="timeline-item">
+					<div class="timeline-item__title">Оценивая макет</div>
+					<p>Оцениваю объем работы, сложность, нюансы. Задаю вопросы.</p>
+					<strong>Время: 2 часа</strong>
+				</div>
+				<div class="timeline-item">
+					<div class="timeline-item__title">ТЗ, смета и график работ</div>
+					<p>Согласовываем техническое задание и график работ по проекту. Осмечиваю стоимость по этапам
+						работы.</p>
+					<strong>Время: 2 - 4 часа</strong>
+				</div>
+				<div class="timeline-item">
+					<div class="timeline-item__title">Вы держите руку на пульсе</div>
+					<p>Выдаю клиенту доступ к GitHub репозиторию и доске Trello. Вы в любое время можете видеть
+						актуальное состояние проекта и задач.</p>
+				</div>
+				<div class="timeline-item">
+					<div class="timeline-item__title">Выполняю каждый этап</div>
+					<p>Поочередно выполняю каждый этап работы. Передаю результаты. Заказчик производит поэтапную оплату.
+					</p>
+				</div>
+				<div class="timeline-item">
+					<div class="timeline-item__title">Финальное ревью проекта</div>
+					<p>Проект готов. Финальное ревью и полировка до идеального состояния. Передаю файлы проекта, заливаю
+						сайт на хостинг заказчика.</p>
+					<strong>Время: 2 - 4 часа</strong>
+				</div>
 			</div>
 		</div>
 	</section>
