--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						</li> -->
 						<!-- <object data="./img/socials/inst.svg" type="image/svg+xml" width="48" height="48"></object> -->
 						<li>
-							<a href="#!">
+							<a href="#!" class="svg-inst">
 								<img src="./img/socials/inst.svg" alt="">
 							</a>
 						</li>
@@ -255,15 +255,79 @@
 		</div>
 	</section>
 
-	<section class="contacts">
+	<section class="contacts" id="contacts">
 		<div class="container">
-
+			<div class="section-title">
+				<h2 class="h2 grad-border">Контакты</h2>
+			</div>
+			<div class="contacts-wrapper">
+				<div class="contacts__col">
+					<ul class="contacts-list">
+						<li class="contacts-list__item">
+							<span>Email</span>
+							<a class="email" href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
+						</li>
+						<li class="contacts-list__item">
+							<span>Телефон</span>
+							<a class="telephone" href="tel:+79828257177">+7 (982) 825-71-77</a>
+						</li>
+					</ul>
+					<div class="contact-socials">
+						<ul class="socials">
+							<li>
+								<a href="#!">
+									<svg class="svg-tg">
+										<use href="./img/socials/svgSprite.svg#svg-tg"></use>
+									</svg>
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									<svg class="svg-vk">
+										<use href="./img/socials/svgSprite.svg#svg-vk"></use>
+									</svg>
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									<svg class="svg-vk">
+										<use href="./img/socials/svgSprite.svg#svg-fb"></use>
+									</svg>
+								</a>
+							</li>
+							<li>
+								<a href="#!" class="svg-inst">
+									<img src="./img/socials/inst.svg" alt="">
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									<svg class="svg-ws">
+										<use href="./img/socials/svgSprite.svg#svg-whatsap"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="contacts__col">
+					<div class="contacts-text">
+						<p>Если вы ищите специалиста по верстке сайтов или frontend разработчика в команду для работы над проектом —  напишите мне.
+						</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
 	<footer class="footer">
 		<div class="container">
-			Footer. Всегда внизу страницы
+			<div class="footer__corypthing">
+				<span>© 2023 — Альберт Буров</span>
+				<p>
+					Веб-разработчик из Ижевска, занимаюсь версткой и созданием сайтов. <br> Этот сайт сделал в рамках прохождения обучения по верстке на курсах от <a href="https://webcademy.ru/">WebCademy.ru</a>
+				</p>
+			</div>
 		</div>
 	</footer>
 
