--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- Title and SEO -->
-	<title>Стартовый шаблон</title>
-	<meta name="description" content="Описание страницы" />
-	<meta name="keywords" content="ключевые слова, фразы" />
+	<title>Портфолио</title>
+	<meta name="description" content="Портфолио верстальщика" />
+	<meta name="keywords" content="Верстальщик, верстка, верстка сайта" />
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="./css/main.css" />
@@ -331,7 +331,7 @@
 		</div>
 	</footer>
 
-	<script src=""></script>
+	<script src="./js/main.js"></script>
 </body>
 
 </html>
