--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<ul class="nav-list">
 						<li class="nav-list__item"><a href="#skills">Навыки</a></li>
 						<li class="nav-list__item"><a href="#portfolio">Портфолио</a></li>
-						<li class="nav-list__item"><a href="#work">Как я работаю</a></li>
+						<li class="nav-list__item"><a href="#timeline">Как я работаю</a></li>
 						<li class="nav-list__item"><a href="#contacts">Контакты</a></li>
 					</ul>
 				</nav>
@@ -163,7 +163,7 @@
 		</div>
 	</section>
 
-	<section class="portfolio">
+	<section class="portfolio" id="portfolio">
 		<div class="container">
 			<div class="portfolio-title">
 				<h2 class="h2 grad-border">Портфолио</h2>
@@ -218,7 +218,7 @@
 		</div>
 	</section>
 
-	<section class="timeline">
+	<section class="timeline" id="timeline">
 		<div class="container">
 			<div class="section-title">
 				<h2 class="h2 grad-border">Как я работаю</h2>
