--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						</ul>
 					</div>
 					<div class="email-wrapper">
-						<a class="connection" href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
+						<a class="link" href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
 					</div>
 				</div>
 			</div>
@@ -264,11 +264,11 @@
 					<ul class="contacts-list">
 						<li class="contacts-list__item">
 							<span>Email</span>
-							<a class="connection" href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
+							<a class="link" href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
 						</li>
 						<li class="contacts-list__item">
 							<span>Телефон</span>
-							<a class="connection" href="tel:+79828257177">+7 (982) 825-71-77</a>
+							<a class="link" href="tel:+79828257177">+7 (982) 825-71-77</a>
 						</li>
 					</ul>
 					<div class="contact-socials">
@@ -322,8 +322,8 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__corypthing">
+				<p>© 2023 — Альберт Буров</p>
 				<p>
-					<span>© 2023 — Альберт Буров</span>
 					Веб-разработчик из Ижевска, занимаюсь версткой и созданием сайтов. <br> Этот сайт сделал в рамках прохождения обучения по верстке на курсах от <a href="https://webcademy.ru/">WebCademy.ru</a>
 				</p>
 			</div>
