--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <body>
 	<header class="header">
 		<div class="container">
-			<div class="flex-wrapper">
+			<div class="header-wrapper">
+				<div class="header-logo">HTML Верстальщик</div>
 				<nav class="nav">
 					<ul class="nav-list">
 						<li class="nav-list__item"><a href="#skills">Навыки</a></li>
@@ -47,6 +48,42 @@
 						<li class="nav-list__item"><a href="#timeline">Как я работаю</a></li>
 						<li class="nav-list__item"><a href="#contacts">Контакты</a></li>
 					</ul>
+					<ul class="socials">
+						<li>
+							<a href="#!">
+								<svg class="svg-tg">
+									<use href="./img/socials/svgSprite.svg#svg-tg"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a href="#!">
+								<svg class="svg-vk">
+									<use href="./img/socials/svgSprite.svg#svg-vk"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a href="#!">
+								<svg class="svg-vk">
+									<use href="./img/socials/svgSprite.svg#svg-fb"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a href="#!" class="svg-inst">
+								<img src="./img/socials/inst.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="#!">
+								<svg class="svg-ws">
+									<use href="./img/socials/svgSprite.svg#svg-whatsap"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+					<a class="link" href="mailto:burovalbert@mail.ru">burovalbert@mail.ru</a>
 				</nav>
 				<div class="header-social">
 					<a href="#!" class="header-social__link">
@@ -60,6 +97,9 @@
 						</svg>
 					</a>
 				</div>
+				<button class="header__burger-menu">
+					<span></span><span></span><span></span>
+				</button>
 			</div>
 		</div>
 	</header>
