--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		</div>
 	</section>
 
-	<section class="header-skills none" id="skills">
+	<section class="header-skills" id="skills">
 		<div class="container">
 			<div class="header-skills__wrapper">
 				<div class="header-skills__col">
