--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
 				<div class="header-content__photo">
 					<img src="./img/bg/header-img.jpg" alt="img">
 				</div>
+				<div class="header-content__title mobile">
+					<h1 class="h1 grad-border">Альберт Буров</h1>
+				</div>
 			</div>
 		</div>
 		<div class="header-content__banner">
