--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</div>
 	</section>
 
-	<section class="portfolio " id="portfolio">
+	<section class="portfolio" id="portfolio">
 		<div class="container">
 			<div class="portfolio-title">
 				<h2 class="h2 grad-border">Портфолио</h2>
@@ -264,7 +264,7 @@
 		</div>
 	</section>
 
-	<section class="timeline none" id="timeline">
+	<section class="timeline" id="timeline">
 		<div class="container">
 			<div class="section-title">
 				<h2 class="h2 grad-border">Как я работаю</h2>
