--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 		</div>
 	</section>
 
-	<section class="contacts none" id="contacts">
+	<section class="contacts" id="contacts">
 		<div class="container">
-			<div class="section-title">
+			<div class="contacts-title">
 				<h2 class="h2 grad-border">Контакты</h2>
 			</div>
 			<div class="contacts-wrapper">
@@ -366,7 +366,7 @@
 		</div>
 	</section>
 
-	<footer class="footer none">
+	<footer class="footer">
 		<div class="container">
 			<div class="footer__corypthing">
 				<p>© 2023 — Альберт Буров</p>
