--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<use href="./img/socials/svgSprite.svg#svg-ln"></use>
 						</svg>
 					</a>
-					<a href="#" class="header-social__link">
+					<a href="https://github.com/Alishmen" class="header-social__link" target="_blank">
 						<svg class="svg-git">
 							<use href="./img/socials/svgSprite.svg#svg-git"></use>
 						</svg>
@@ -153,14 +153,14 @@
 					<div class="socials-wrapper">
 						<ul class="socials">
 							<li>
-								<a href="#!" class="svg-tg">
+								<a href="https://t.me/Alishmenn" class="svg-tg" target="_blank">
 									<svg >
 										<use href="./img/socials/svgSprite.svg#svg-tg"></use>
 									</svg>
 								</a>
 							</li>
 							<li>
-								<a href="#!" class="svg-vk">
+								<a href="https://vk.com/alishmen" class="svg-vk" target="_blank">
 									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-vk"></use>
 									</svg>
@@ -182,7 +182,7 @@
 							</li> -->
 							<!-- <object data="./img/socials/inst.svg" type="image/svg+xml" width="48" height="48"></object> -->
 							<li>
-								<a href="#!" class="svg-inst">
+								<a href="https://instagram.com/alishmen?r=nametag" class="svg-inst" target="_blank">
 									<img src="./img/socials/inst.svg" alt="">
 								</a>
 							</li>
@@ -209,30 +209,34 @@
 				<h2 class="h2 grad-border">Портфолио</h2>
 			</div>
 			<div class="portofolio-wrapper">
-				<div class="portfolio-card">
-					<div class="portfolio-card__img">
-						<picture>
-							<source media="(max-width: 599px)" srcset="./img/card-adaptation/xs-big1.jpg">
-							<img src="./img/card/1-big.jpg" alt="img">
-						</picture>	
+				<a href="https://alishmen.github.io/forest-travel/" target="_blank">
+					<div class="portfolio-card">
+						<div class="portfolio-card__img">
+							<picture>
+								<source media="(max-width: 599px)" srcset="./img/card-adaptation/xs-big1.jpg">
+								<img src="./img/card/forest.jpg" alt="img">
+							</picture>	
+						</div>
+						<div class="portfolio-card__text">
+							<div class="h4">Верстка “Форест тревел”</div>
+							<p>Верстка многостраничного сайта</p>
+						</div>
 					</div>
-					<div class="portfolio-card__text">
-						<div class="h4">Верстка “Форест тревел”</div>
-						<p>Верстка многостраничного сайта</p>
+				</a>
+				<a href="https://alishmen.github.io/Unit/" target="_blank">
+					<div class="portfolio-card">
+						<div class="portfolio-card__img">
+							<picture>
+								<source media="(max-width: 599px)" srcset="./img/card-adaptation/xs-big2.jpg">
+								<img src="./img/card/unit.jpg" alt="img">
+							</picture>	
+						</div>
+						<div class="portfolio-card__text">
+							<div class="h4">Сайт приложения “Юнит”</div>
+							<p>Верстка лендинга</p>
+						</div>
 					</div>
-				</div>
-				<div class="portfolio-card">
-					<div class="portfolio-card__img">
-						<picture>
-							<source media="(max-width: 599px)" srcset="./img/card-adaptation/xs-big2.jpg">
-							<img src="./img/card/2-big.jpg" alt="img">
-						</picture>	
-					</div>
-					<div class="portfolio-card__text">
-						<div class="h4">Сайт приложения “Юнит”</div>
-						<p>Верстка лендинга</p>
-					</div>
-				</div>
+				</a>
 				<div class="portfolio-card">
 					<div class="portfolio-card__img">
 						<img src="./img/card/1-small.jpg" alt="img">
@@ -318,37 +322,45 @@
 							<a class="link" href="tel:+79828257177">+7 (982) 825-71-77</a>
 						</li>
 					</ul>
-					<div class="contact-socials">
+					<div class="contacts-socials">
 						<ul class="socials">
 							<li>
-								<a href="#!">
-									<svg class="svg-tg">
+								<a href="https://t.me/Alishmenn" class="svg-tg" target="_blank">
+									<svg >
 										<use href="./img/socials/svgSprite.svg#svg-tg"></use>
 									</svg>
 								</a>
 							</li>
 							<li>
-								<a href="#!">
-									<svg class="svg-vk">
+								<a href="https://vk.com/alishmen" class="svg-vk" target="_blank">
+									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-vk"></use>
 									</svg>
 								</a>
 							</li>
 							<li>
-								<a href="#!">
-									<svg class="svg-vk">
+								<a href="#!" class="svg-fb">
+									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-fb"></use>
 									</svg>
 								</a>
 							</li>
+							<!-- <li style="background-color: rgb(18, 148, 105);">
+								<a href="#!">
+									<svg class="svg-inst">
+										<use href="./img/socials/svgSprite.svg#svg-inst"></use>
+									</svg>
+								</a>
+							</li> -->
+							<!-- <object data="./img/socials/inst.svg" type="image/svg+xml" width="48" height="48"></object> -->
 							<li>
-								<a href="#!" class="svg-inst">
+								<a href="https://instagram.com/alishmen?r=nametag" class="svg-inst" target="_blank">
 									<img src="./img/socials/inst.svg" alt="">
 								</a>
 							</li>
 							<li>
-								<a href="#!">
-									<svg class="svg-ws">
+								<a href="#!" class="svg-ws">
+									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-whatsap"></use>
 									</svg>
 								</a>
